test/fail/ac/pointcutelemswrongid.app
//#4 pointcut element uses unknown identifier
application test

access control rules

  pointcut foo(a:Int,b:Bool)
  {
    page home(),
    page bar(a,fndjk),
    template car(c),
    ajaxtemplate fdksnfhds(fgd,fg *)
  }
  